# life-tracker

./: .gitignore  Cargo.toml  Dockerfile  README.md  deployToProd.sh  life-tracker.db  life-tracker.sh  package-lock.json  package.json  token
config/: application.toml
migrations/2025-02-06-215506_initial_setup/: down.sql  up.sql
migrations/2025-03-07-203725_tags-to-a-task/: down.sql  up.sql
public/: index.html
src/: auth.rs  claims.rs  clean_input.rs  db.rs  lib.rs  main.rs  schema.rs  settings.rs  state.rs
src/crud/: daily_todos.rs  goals.rs  mod.rs  project.rs  reward.rs  tags.rs  task.rs  user.rs
src/gpt/: gpt_net.rs  gpt_utils.rs  mod.rs
src/middleware/: log_routes.rs  mod.rs
src/models/: daily_todo.rs  goal.rs  mod.rs  project.rs  reward.rs  tags.rs  task.rs  task_tag.rs  user.rs
src/routes/: daily_todo_api.rs  goals_api.rs  gpt_api.rs  mod.rs  navigation.rs  projects_api.rs  rewards_api.rs  tags_api.rs  tasks_api.rs  users_api.rs
src/static/js/: script.js
src/templates/: dashboard.html.tera
src/templates/partials/: daily_tasks.tera  goal_rewards.tera  progress_overview.tera
src/types/: general.rs  mod.rs  task_status.rs
static/: index.html
static/css/: output.css  style.css
static/js/: script.js
templates/: dashboard-1.hbs  dashboard.hbs  gpt.hbs  login.hbs  project.hbs  time-tracker-demo.hbs  time-tracker.hbs
templates/partials/: autocomplete.hbs  daily_tasks.hbs  footer.hbs  goal_rewards.hbs  goals.hbs  header.hbs  progress_overview.hbs  project.hbs  tags.hbs  tasks.hbs
tests/: clean_input.rs  daily_todos.rs  goals_api.rs  gpt.rs  project_api.rs  rewards_api.rs  tasks_api.rs  users_api.rs
