[package]
name = "life-tracker"
version = "0.1.0"
edition = "2024"

[lib]
name = "life_tracker"
path = "src/lib.rs"

[[bin]]
name = "lifeTracker"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.10.2", features = ["secure-cookies", "cookies"] }
actix-web-grants = "4.1.2"
actix-web-httpauth = "0.8.2"

chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.8", features = ["sqlite", "chrono", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
actix-files = "0.6"
env_logger = "0.11.7"
log = "0.4.26"
actix-service = "2.0.3"
futures = "0.3.31"
actix-rt = "2.10.0"
handlebars = { version = "6.3.1", features = ["dir_source"] }
serde_json = "1.0.140"
jsonwebtoken = "9.1.0"
bcrypt = "0.17.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
diesel_migrations = "2.2.0"
ammonia = "4.0.0"
maplit = "1.0.2"
reqwest = { version = "0.12.13", features = ["json"] }
tokio = { version = "1.44.0", features = ["full", "test-util"] }
config = "0.15.9"
serde_derive = "1.0.219"

[dev-dependencies]
actix-web-httpauth = "0.8.0"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
parse-display = "0.10.0"
jsonwebtoken = "9.1.0"
chrono = "0.4"
